--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/sidebar_page_links.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/navigation/sidebar_page_links.html
@@ -6,14 +6,15 @@
             Matchmaking
         </a>
     </button>
-
+    {% if page == 'edit-gamer-profile' or page == 'home-timeline' %}
     <button class="page-link" onclick="location.href=`{% url 'create-gamer-profile' user.username %}`">
         <a href="{% url 'create-gamer-profile' user.username %}">
 
             Create New Gamer Profile
         </a>
     </button>
-
+    {% endif %}
+    {% if page == 'create-gamer-profile' or page == 'home-timeline' %}
     {%if gamer_profiles %}
     <button class="page-link" onclick="location.href=`{% url 'edit-gamer-profile' user.username %}`">
         <a href="{% url 'edit-gamer-profile' user.username %}">
@@ -23,4 +24,5 @@
     </button>
 
     {%endif%}
+    {% endif %}
 </div>
