Fixed bug in posts-by-user page. Instead of showing stats of  profile user, it was showing stats of logged in user

--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/community_page_sidebar.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/community/community_page_sidebar.html
@@ -11,6 +11,12 @@
             Created on: {{community.post_date}}
         </div>
         <div class="members_info">
+            <div class="community-admin">
+                Created by: {{community.created_by}}
+                {%if user == community.created_by%}
+                Edit Commuity
+                {%endif%}
+            </div>
             Members: {{community.members.count}}
         </div>
     </div>
