--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/addPost/add_post_post.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/post/addPost/add_post_post.html
@@ -63,7 +63,7 @@
 
 
     </div>
-    <!-- <div>
-                            <i class="fa-solid fa-sliders" style="height: 100%; margin:auto 10px;"></i>
-                        </div> -->
+    <div>
+        <i class="fa-solid fa-newspaper"></i>
+    </div>
 </div>
