--- a/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/gamer_profile_stats.html
+++ b/DjangoWebapp-ToMerge/DjangoWebapp-ToMerge/DjangoDjangoDjango - Improving/PostIT/page3/templates/gamerProfile/gamer_profile_stats.html
@@ -14,7 +14,7 @@
                 {{g.server}}</span>
         </div>
         <div class="game_stat">
-            <span class="label"><i class="fa-solid fa-server"></i>Allow Matchmaking:</span>
+            <span class="label"><i class="fa-solid fa-magnifying-glass"></i>Allow Matchmaking:</span>
             <span>
                 <i class="fa-solid fa-toggle-on"></i></span>
         </div>
@@ -27,17 +27,17 @@
     <div class="game_name" style="display: none;">{{g.game}}</div>
     <div class="game_stat">
         <span class="label"><i class="fa-solid fa-ranking-star"></i>Rank:</span>
-        <span>
+        <span class="value">
             {{main_game_profile.main_gamer_profile.rank}}</span>
     </div>
     <div class="game_stat">
         <span class="label"><i class="fa-solid fa-server"></i>Server:</span>
-        <span>
+        <span class="value">
             {{main_game_profile.main_gamer_profile.server}}</span>
     </div>
     <div class="game_stat">
-        <span class="label"><i class="fa-solid fa-server"></i>Allow Matchmaking:</span>
-        <span>
+        <span class="label"><i class="fa-solid fa-magnifying-glass"></i>Allow Matchmaking:</span>
+        <span class="value">
             <button><i class="fa-solid fa-toggle-on" style="font-size: large;  padding:0px"></i></button></span>
     </div>
     {%endif%}
